# validator-regex

./: pyproject.toml
.github/workflows/: publish.yml
src/validator_regex/: RegexValidator.py  ValidatorContext.py  main.py
src/validator_regex/strategies/: BRLCurrencyValidation.py  CNPJValidation.py  CPFValidation.py  EmailValidation.py  NameValidation.py  TimeValidation.py  ValidationStrategy.py
tests/: test_brlcurrencyvalidation.py  test_cnpjvalidation.py  test_cpfvalidation.py  test_emailvalidation.py  test_namevalidation.py  test_timevalidation.py
