[project]
name = "validator-regex"
version = "0.1.0"
description = ""
authors = [
    {name = "jcarlossc",email = "josecscosta@fac.pe.senac.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "validator_regex", from = "src"}]


[tool.poetry.group.dev.dependencies]
mypy = "^1.18.2"
pytest = "^8.4.2"
black = "^25.9.0"
types-regex = "^2025.10.23.20251023"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
